--- a/app/modules/component-Example/_index.scss
+++ b/app/modules/component-Example/_index.scss
@@ -1,6 +1,6 @@
 // still need to fix this...
-@import '../app-css/_boilerplate.scss';
+// @import '~app-css/test.scss';
 
 .Example {
-  background-color: $shiny-blue;
+  background-color: red;
 }
